--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@goku-gaga/node-lts",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "bin": {
     "node-lts": "bin/node-lts"
   },
@@ -17,7 +17,9 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.0",
+    "cli-color": "^1.4.0",
     "cli-table": "^0.3.1",
-    "compare-versions": "^3.5.1"
+    "compare-versions": "^3.5.1",
+    "terminal-link": "^1.3.0"
   }
 }
