--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@goku-gaga/node-lts",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "bin": {
     "node-lts": "bin/node-lts"
   },
@@ -19,7 +19,7 @@
     "type": "git",
     "url": "git@github.com:GoKu-gaga/node-lts.git"
   },
-  "homepage": "https://https://github.com/GoKu-gaga/node-lts#readme",
+  "homepage": "https://github.com/GoKu-gaga/node-lts#readme",
   "dependencies": {
     "axios": "^0.19.0",
     "cli-color": "^1.4.0",
